[tool.poetry]
name = "scoreboard"
version = "0.3.0"
description = ""
authors = ["Clemens <clemens@bb5.social>"]
#readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
Adafruit-PCA9685 = "*"
fastapi = "*"
uvicorn = "*"
toml = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
